Receive messages is workinggit status!

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -24,7 +24,7 @@
 
         <div class="wrap-input floating-label">
           <span class="btn-show-pass"></span>
-          <input type="password" id="password" placeholder="Password" name="password" required minlength="12">
+          <input type="password" id="password" placeholder="Password" name="password">
           <label for="password">Password</label>
         </div>
 
