Clean a bit the code and update the server

--- a/app/src/main.html
+++ b/app/src/main.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="stylesToggleButton.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mini-Signal</title>
-    <script type="module" src="main.js" defer></script>
   </head>
 
   <body data-theme="light">
@@ -26,8 +25,8 @@
   <div class="column right">
     <header>
       <div class="bundle">
-        <div class="circle"><span id="currentFriendFirstLetter">B</span></div>
-        <p id="currentFriendName">Boris</p>
+        <div class="circle"><span id="currentFriendFirstLetter"></span></div>
+        <p id="currentFriendName"></p>
       </div>
       <div class="bundle">
         <input type="text" id="searchBarMessage" onkeyup="searchMessage(this)" placeholder="Search message" title="Search message">
